# Among-llms

./: .gitignore  Dockerfile  HF_SPACE_README.md  README.md  app.py  pyproject.toml  run_model.py
agentforge_env/: __init__.py  client.py  inference.py  models.py  reward.py  serialization.py  tracks.py
agentforge_env/server/: Dockerfile  __init__.py  app.py  environment.py  requirements.txt
animate-rollouts/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
animate-rollouts/docs/: asset-license-manifest.md  asset-sources.md
animate-rollouts/scripts/: build-match-input.ts  build-overseer-input.ts  convert_eval_to_fight.py  convert_eval_to_viz.py  (+3 more)
data/: banking_episodes_249.json  generator_prompt.txt  holdout_episodes_10.json  holdout_episodes_synth_40.json  schema.json  seed_episodes.json  seed_episodes_extra.json  sft_rl_split.json
demo/: app.py
eval/: eval_metrics.py  evaluate_predictions.py  fast_fn_check.py  full_eval.py  generate_adapter_predictions.py  quick_fn_check.py  run_baseline.py  run_model.py
generated_dataset/: dev.jsonl  test.jsonl  test_episodes.json  train.jsonl
generated_dataset_banking/: dev.jsonl  manifest.json  test.jsonl
generated_dataset_rl_reasoning/: dev.jsonl  train.jsonl
generated_dataset_sft_reasoning/: dev.jsonl  train.jsonl
generated_dataset_v2/: manifest.json  test.jsonl  train.jsonl
generated_dataset_v3/: dev.jsonl  manifest.json  test.jsonl  train.jsonl
train/: make_sft_dataset.py  merge_lora_adapter.py  reward_fn.py  rl_train_openenv.py  rl_train_trl.py  sft_train_unsloth.py
(+23 files in other folders)
